# cpp-mcp-deb

./: CMakeLists.txt  LICENSE  README.md
cpp-mcp/: LICENSE
cpp-mcp/debian/: debhelper-build-stamp
cpp-mcp/debian/libcpp-mcp-dev/DEBIAN/: md5sums
debian/: changelog  control  files
debian/libcpp-mcp-dev/DEBIAN/: control
debian/libcpp-mcp-dev/usr/share/doc/libcpp-mcp-dev/: copyright
